--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 server.port=8010
 
+
+
+xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+xxl.job.executor.appname=executorDemo2
+xxl.job.executor.ip=127.0.0.1
+xxl.job.executor.port=9998
+xxl.job.executor.logpath=/data/applogs/xxl-job/jobhandler
+xxl.job.executor.logretentiondays=1
+
+xxl.job.accessToken=
